[package]
name = "winlog2"
version = "0.3.2"
edition = "2021"
authors = [
    "Jeroen C. van Gelderen <jeroen@vangelderen.org>",
    "Berrysoft <Strawberry_Str@hotmail.com>",
]
categories = ["development-tools::debugging", "os::windows-apis"]
description = "A simple Rust log backend to send messages to the Windows event log."
documentation = "https://github.com/Berrysoft/winlog"
homepage = "https://github.com/Berrysoft/winlog"
repository = "https://github.com/Berrysoft/winlog"
keywords = ["eventlog", "logging", "windows"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
rand = "0.8"
scopeguard = "1"

[dependencies]
env_logger = { version = "0.11", default-features = false, optional = true }
log = { version = "0.4", features = ["std"] }
windows-sys = { version = "0.59", features = ["Win32_System_EventLog"] }
widestring = "1"
winreg = "0.55"
thiserror = "2"
